--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,20 @@
 {
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.92",
-        "squizlabs/php_codesniffer": "^4.0"
+        "squizlabs/php_codesniffer": "^4.0",
+        "phpunit/phpunit": "^12.5"
     },
     "autoload": {
         "psr-4": {
             "App\\": "src/"
+        }
+    },
+    "require": {
+        "vlucas/phpdotenv": "^5.6"
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
         }
     }
 }
